adjusted (responsiveDrawer-content-7) padding to 2px to fix slight horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@ blockquote p {
 }
 
 .ResponsiveDrawer-content-7 {
-  padding: 0!important;
+  padding: 2px!important;
 }
 
 .ResponsiveDrawer-menuButton-4 {
